Adiciona informações ao README.md e faz pequenos comentarios ao script.js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Tags usadas para controle do estilo -->
   <main>
     <header>
       <h1>Here's a picture of a cute cat</h1>
